# dartbrains

./: .buildinfo  .gitignore  CLAUDE.md  CNAME  LICENSE.txt  README.md  _config.yml  _toc.yml  book.yml  genindex.html  myst.yml  objects.inv  output.json  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: deploy-book.yml  deploy-marimo-book.yml  sphinx-linkcheck.yml
.sass-cache/05f78cc750d8faea0d659cb546096bb671b3a169/: _arrowalt.scssc
.sass-cache/09d866f3b1874a0ced90ee2c6eed5ec4468a0c79/: _components.book__layout.scssc  _components.book__topbar.scssc  _components.interact-button.scssc  _components.page__footer.scssc  _components.page__nav.scssc  _components.page__onthispage.scssc  _components.search.scssc  _components.thebelab.scssc
.sass-cache/0dbc3c76f8c018d638221217e50a757df0ffd504/: main.scssc
.sass-cache/2db281d955669357442c40110fa6eab2193500a3/: _utilities.clearfix.scssc  _utilities.hide.scssc  _utilities.spacings.scssc
.sass-cache/37a6100a5ceef1f99b5950183f3ae92b468c9ad3/: _settings.core.scssc
.sass-cache/3dcc11e7763fa24d2359f68ee6a645fe38b7c9a1/: _base.scssc  hamburgers.scssc
.sass-cache/43b75eafbfad05a7b4d07bb922ef8c66b5528f34/: _tools.clearfix.scssc  _tools.font-size.scssc  _tools.hidden.scssc  _tools.mq.scssc
.sass-cache/6f139051faf141aaff11c3bf9900afdfe3df8d02/: _objects.copy-button.scssc  _objects.tooltip.scssc
.sass-cache/8864b39c040a35b44254524a8f1f8a7964051ece/: _elements.links.scssc  _elements.syntax-highlighting.scssc  _elements.tables.scssc  _elements.typography.scssc  _elements.variables.scssc
.sass-cache/ab8142b6d207209cbb66430566fc15896c61432b/: _components.hidecells.scssc  _components.page.scssc  _components.sidebar-right.scssc
.sass-cache/b84579429e094fdfb3f05353b7c5cbd5ee41c693/: _objects.layout.scssc  _objects.wrapper.scssc
.sass-cache/d182fb4672ffb6cde5250e33fe9638e3aa5abacf/: _generic.box-sizing.scssc  _generic.reset.scssc  (+2 more)
Code/: data.py  mr_simulations.py  mr_widgets.py  notebook_utils.py
Tutorials/: 1_Introduction_to_Programming.ipynb  2.1_MatplotlibTemplates.ipynb  2_Introduction_to_Dataframes_&_Plotting.ipynb  3_Introduction_to_NeuroimagingData_in_Python.ipynb  5_Signal_Processing.ipynb
_build/: intro.html  intro.md
_data/: toc.yml
_site/: intro.html  redirects.json  search.html
content/: 2019_Spring.html  2020_Fall.html  2020_Fall.md  2020_Spring.html  2021_Fall.html  2021_Fall.md  2022_Fall.html  Connectivity.py  Contributing.html  Contributing.md  Download_Data.html  Download_Data.ipynb  Download_Data.py  GLM.html  GLM.ipynb  GLM.py  GLM_Single_Subject_Model.html  GLM_Single_Subject_Model.ipynb  GLM_Single_Subject_Model.py  Glossary.html  Glossary.md  Glossary.py  Group_Analysis.html  Group_Analysis.ipynb  Group_Analysis.py  ICA.html  ICA.ipynb  ICA.py  Instructors.html  Instructors.md  Intro_to_Neuroimaging.html  Intro_to_Neuroimaging.md  Introduction_to_Discovery.html  Introduction_to_Discovery.ipynb  Introduction_to_ICA.html  Introduction_to_ICA.ipynb  Introduction_to_ICA.py  Introduction_to_JupyterHub.html  Introduction_to_JupyterHub.ipynb  Introduction_to_Neuroimaging_Data.py  (+43 more)
dartbrains/: __init__.py  datasets.py  functions.py
dartbrains.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: export_notebooks.py
(+374 files in other folders)
